test/gpu/native/studies/sort/scanTestMultiDim.good
scanTestMultiDim.chpl:5: error: gpuScan only supports 1D arrays
